--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
+  },
+  "jest": {
+    "verbose": true
   },
   "dependencies": {
-    "jest": "^26.6.3",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-redux": "^7.2.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "autoprefixer": "^10.2.5",
+    "jest": "^26.6.3",
+    "postcss": "^8.2.10",
+    "tailwindcss": "^2.1.1",
     "vite": "^2.1.5"
   }
 }
