--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "redux": "^4.0.5",
     "react-redux": "^7.2.3"
   },
   "devDependencies": {
