--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "verbose": true
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "react-redux": "^7.2.3"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
