--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@testing-library/react-hooks": "^5.1.2",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.2.5",
+    "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
+    "jest-mock-axios": "^4.4.0",
     "postcss": "^8.2.10",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "^2.1.1",
     "vite": "^2.1.5"
   }
